contact us, y more info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrap">
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="http://placehold.it/500x150"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="/img/EA official logo"></a>
     
     <nav class="navbar">
       <div class="container">
@@ -17,6 +17,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/ContactUs">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
