--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body style="background-image: url("Best-Website-Background-Images10.jpg");>
+  <body style="background-image: url(http://media.caranddriver.com/images/media/51/25-cars-worth-waiting-for-lp-ford-gt-photo-658253-s-original.jpg);>
 
     {% include header.html %}
 
