image centering and css file creation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="css">
+</head>
 
   {% include head.html %}
 
-  <body style="background-image: url(http://media.caranddriver.com/images/media/51/25-cars-worth-waiting-for-lp-ford-gt-photo-658253-s-original.jpg);>
+  <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>
 
     {% include header.html %}
 
