--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header class="site-header">
 
   <div class="wrap">
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="/img/EA official logo"></a>
-    
+    <div>
+      <a class="site-title" href="{{ site.baseurl }}/"><img style="height: 25%; width: 25%;" class="center" src="/img/EA official logo new.png" alt="EA Investment logo"></a>
+    </div>
     <nav class="navbar">
-      <div class="container">
+      <div class="container">   
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
