--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
             <span class="icon-bar"></span>
           </button>          
         </div>
-        <div class="navbar-collapse collapse">
+        <div style="text-align: center;" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
