seleccion de pueblos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,21 @@
   <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>
 
     {% include header.html %}
+    <div class="none"></div>
+    
+<a href="/Pueblos_pages/Carolina">select this link</a>
+
+<div class="locationSelector">
+  <div id="puebloTopMenu">
+    <h2><b>Pueblos:</b></h2>
+  </div>
+  <div style="margin-left: 10px">  
+    <li>Carolina</li>
+    <li>Bayamon</li>
+    <li>Caguas</li>
+    <li>Mayaguez</li>
+  </div>
+</div>
 
     <div class="page-content">
       <div class="wrapper">
