links del menu de las casas a las casas

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,19 +6,21 @@
   <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>
 
     {% include header.html %}
-    <div class="none"></div>
-    
-<a href="/Pueblos_pages/Carolina">select this link</a>
+    <div class="none"></div> 
 
 <div class="locationSelector">
   <div id="puebloTopMenu">
-    <h2><b>Pueblos:</b></h2>
+    <h3><b>Casas por pueblo:</b></h3>
   </div>
-  <div style="margin-left: 10px">  
-    <li>Carolina</li>
-    <li>Bayamon</li>
-    <li>Caguas</li>
-    <li>Mayaguez</li>
+  <div style="margin-left: 12px">  
+    <li><a href="/PueblosG/Carolina">Carolina</a></li>
+    <li><a href="/PueblosG/Bayamon">Bayamon</a></li>
+    <li><a href="/PueblosG/Caguas">Caguas</a></li>
+    <li><a href="/PueblosG/Cabo Rojo">Cabo rojo</a></li>
+    <li><a href="/PueblosG/Rio Grande">Rio Grande</a></li>
+    <li><a href="/PueblosG/Lajas">Lajas</a></li>
+    <li><a href="/PueblosG/Vieques">Vieques</a></li>
+    <li><a href="/PueblosG/Mayaguez">Mayaguez</a></li>
   </div>
 </div>
 
