links ya completados

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>
+  <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>sqx
 
     {% include header.html %}
     <div class="none"></div> 
