--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
     <div>
-      <a class="site-title" href="{{ site.baseurl }}/"><img style="height: 16em; width: 22em" class="center" src="Edweb/img/EA official logo new.png" alt="EA Investment logos"></a>
+      <a class="site-title" href="{{ site.baseurl }}/"><img style="height: 16em; width: 22em" class="center" src="/Edweb/img/EA official logo new.png" alt="EA Investment logos"></a>
     </div>
     <nav class="navbar">
       <div class="container">   
