--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
         <div style="text-align: center;" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/ContactUs">Contact Us</a></li>
+            <li><a href="/Edweb/about">About</a></li>
+            <li><a href="/Edweb/ContactUs">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
