--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
   <div class="post-nav">
     {% if page.next.url %}
-      <a href="{{ page.next.url }}">&laquo; Prev</a>
+      <a href="/Edweb{{ page.next.url }}">&laquo; Prev</a>
     {% endif %}
     {% if page.previous.url and page.next.url %}
       |
