--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
       |
     {% endif %}
     {% if page.previous.url %}
-      <a href="{{ page.previous.url }}">Next &raquo;</a>
+      <a href="/Edweb{{ page.previous.url }}">Next &raquo;</a>
     {% endif %}
   </div>
 
