--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,14 @@
     <h3><b>Casas por pueblo:</b></h3>
   </div>
   <div style="margin-left: 12px">  
-    <li><a href="/PueblosG/Carolina">Carolina</a></li>
-    <li><a href="/PueblosG/Bayamon">Bayamon</a></li>
-    <li><a href="/PueblosG/Caguas">Caguas</a></li>
-    <li><a href="/PueblosG/Cabo Rojo">Cabo rojo</a></li>
-    <li><a href="/PueblosG/Rio Grande">Rio Grande</a></li>
-    <li><a href="/PueblosG/Lajas">Lajas</a></li>
-    <li><a href="/PueblosG/Vieques">Vieques</a></li>
-    <li><a href="/PueblosG/Mayaguez">Mayaguez</a></li>
+    <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
+    <li><a href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
+    <li><a href="/Edweb/PueblosG/Caguas">Caguas</a></li>
+    <li><a href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
+    <li><a href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
+    <li><a href="/Edweb/PueblosG/Lajas">Lajas</a></li>
+    <li><a href="/Edweb/PueblosG/Vieques">Vieques</a></li>
+    <li><a href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
   </div>
 </div>
 
