--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
         </div>
         <div style="text-align: center;" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="/Edweb/">Home</a></li>
             <li><a href="/Edweb/about">About</a></li>
             <li><a href="/Edweb/ContactUs">Contact Us</a></li>
           </ul>
