--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
 <div class="locationSelector">
   <div id="puebloTopMenu">
-    <h3><b>Casas por pueblo:</b></h3>
+    <h3><b>Propiedad por pueblo:</b></h3>
   </div>
   <div style="margin-left: 12px">  
     <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
