--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
     <li><a href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
     <li><a href="/Edweb/PueblosG/Caguas">Caguas</a></li>
+    <li><a href="/Edweb/PueblosG/Guayama">Guayama</a></li>
     <li><a href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
     <li><a href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
     <li><a href="/Edweb/PueblosG/Lajas">Lajas</a></li>
