--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,23 +16,23 @@
         <div style="text-align: center;" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/Edweb/">Home</a></li>
-            <li><a href="/Edweb/ContactUs">Contact Us</a></li>
-            <div class="dropdown">
-              <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Pueblos
-              <span class="caret"></span></button>
-              <ul class="dropdown-menu">
-                <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
-                <li><a href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
-                <li><a href="/Edweb/PueblosG/Caguas">Caguas</a></li>
-                <li><a href="/Edweb/PueblosG/Guayama">Guayama</a></li>
-                <li><a href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
-                <li><a href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
-                <li><a href="/Edweb/PueblosG/Lajas">Lajas</a></li>
-                <li><a href="/Edweb/PueblosG/Vieques">Vieques</a></li>
-                <li><a href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
-              </ul>
-            </div>
+            <li><a href="/Edweb/ContactUs/" class="headerIcon">Contact Us</a></li>
           </ul>
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Pueblos
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
+              <li><a href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
+              <li><a href="/Edweb/PueblosG/Caguas">Caguas</a></li>
+              <li><a href="/Edweb/PueblosG/Guayama">Guayama</a></li>
+              <li><a href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
+              <li><a href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
+              <li><a href="/Edweb/PueblosG/Lajas">Lajas</a></li>
+              <li><a href="/Edweb/PueblosG/Vieques">Vieques</a></li>
+              <li><a href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
+            </ul>
+          </div>
         </div><!--/.nav-collapse -->
       </div>
     </div>
