--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,23 +18,23 @@
             <li class="active"><a href="/Edweb/">Home</a></li>
             <li><a href="/Edweb/ContactUs/" class="headerIcon">Contact Us</a></li>
           </ul>
-          <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Pueblos
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-              <li><a href="/Edweb/PueblosG/Carolina">Carolina</a></li>
-              <li><a href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
-              <li><a href="/Edweb/PueblosG/Caguas">Caguas</a></li>
-              <li><a href="/Edweb/PueblosG/Guayama">Guayama</a></li>
-              <li><a href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
-              <li><a href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
-              <li><a href="/Edweb/PueblosG/Lajas">Lajas</a></li>
-              <li><a href="/Edweb/PueblosG/Vieques">Vieques</a></li>
-              <li><a href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
-            </ul>
-          </div>
         </div><!--/.nav-collapse -->
-      </div>
+      </div><center>
+        <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" style="background-color: #337ab7; text-shadow:0 0px 0 #fff; color:white" type="button" id="menu1" data-toggle="dropdown">Pueblos
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Carolina">Carolina</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Caguas">Caguas</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Guayama">Guayama</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Lajas">Lajas</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Vieques">Vieques</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
+        </ul>
+      </div></center>
     </div>
   </nav>
 </header>
