added all houses left

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,8 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Fajardo">Fajardo</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/san juan">San Juan</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Lajas">Lajas</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Humacao">Humacao</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Rincon">Rincon</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Toa Baja">Toa Baja</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Vieques">Vieques</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
