--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,8 @@ ul {
   text-align: center;
 }
 .custom {
-  max-width: 100%
+  max-width: 100%;
+  max-height: 180px;
 }
 
 /** Seleccion de pueblos en la pagina. **/
