--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,15 +28,14 @@
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Bayamon">Bayamon</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Caguas">Caguas</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Cabo Rojo">Cabo rojo</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Rio Grande">Rio Grande</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Fajardo">Fajardo</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/san juan">San Juan</a></li>
+          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Canovanas">Canovanas</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Lajas">Lajas</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Humacao">Humacao</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Rincon">Rincon</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Toa Baja">Toa Baja</a></li>
           <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Vieques">Vieques</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1" href="/Edweb/PueblosG/Mayaguez">Mayaguez</a></li>
         </ul>
       </div></center>
     </div>
