--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body style="background-image: url(http://www.remaxhmg.com/images/bgbackgroundbgbackgroundbgbackground.jpg);>sqx
+  <body style="background-image: url(https://firebasestorage.googleapis.com/v0/b/findabis-f0105.appspot.com/o/real%20estate%20background.jpg?alt=media&token=a0dd724b-dbc6-4671-974e-a942b0c53d51)";>
 
     {% include header.html %}
     <div class="none"></div>
